# asteroids

./: Cargo.toml
resources/: display.ron
resources/textures/: sprites.ron
src/: asteroids.rs  components.rs  entities.rs  inputs.rs  main.rs  physics.rs  renderer.rs
src/components/: asteroid.rs  bullet.rs  physics.rs  renderable.rs  ship.rs
src/entities/: asteroid.rs  bullet.rs  saucer.rs  ship.rs
