[package]
name = "asteroids"
version = "0.1.0"
authors = ["Cliff Ingham <inghamn@bloomington.in.gov>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "~0"

[dependencies.sdl2]
version = "~0"
default-features = false
features = ["gfx"]
